# python-pizza-api

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pizza.json  pyproject.toml
.github/workflows/: ci.yml
app/: containers.py
app/api/: deps.py
app/api/routers/: carts.py  extras.py  health.py  orders.py  pizzas.py
app/api/v1/: carts.py  extras.py  orders.py  pizzas.py
app/core/: config.py  exception_handler.py  price_rules.py  response.py
app/db/: models.py  session.py  uow.py
app/db/repositories/: cart_repo.py  customer_repo.py  extra_repo.py  order_repo.py  pizza_repo.py
app/repos/: cart_repo.py  extra_repo.py  order_repo.py  pizza_repo.py
app/schemas/: cart.py  catalog.py  customer.py  order.py  pagination.py
app/services/: cart_service.py  catalog_service.py  order_service.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  extras.json  main.py  pizza.json  pyproject.toml
backend/app/api/routers/: extras.py  pizzas.py
backend/app/core/: config.py  exceptions.py  logging.py  response.py
backend/app/db/: base.py  models.py
backend/app/db/repositories/: customer_repo.py  extra_repo.py  pizza_repo.py
backend/app/schemas/: cart.py
backend/app/services/: order_service.py
backend/docker/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 055731624f6a_add_relationship_between_order_and_.py  424803f46c8e_initial_migration.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/unit/: test_cart_service.py  test_catalog_service.py  test_order_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Breadcrumb.tsx  CustomerDetailsModal.tsx  ErrorCard.tsx  HeroSection.tsx  Layout.tsx  LoadingSkeleton.tsx  OrderErrorModal.tsx  OrderSuccessModal.tsx  PizzaCard.tsx  PizzaExtras.tsx  PizzaImage.tsx
frontend/src/pages/: Home.tsx  Orders.tsx  PizzaDetail.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 37316d9ce11f_refactor_order_and_customer_models.py  4118e8ef4658_add_timestamps_to_all_tables.py  a71461fd0283_add_ingredients_to_pizza.py
scripts/: seed.py
tests/: conftest.py
tests/api/: test_carts.py  test_orders.py  test_pizzas.py
tests/e2e/: __init__.py  conftest.py  test_api.py
tests/unit/: test_price_rules.py
